@startuml
Sala <|-- SalaCerrada
Sala <|-- Anfiteatro
Entrada o-- Usuario
Entrada o-- Espectaculo
Espectaculo o-- Sala
Espectaculo o-- Artista
Espectaculo o-- TipoShow

class Usuario {
  user : String
  nombre : String
  email : String
  password : String
}

class Espectaculo {
   artista : List<Artista>
   fecha : DateTime
   duracionMinutos : Integer
   tipoShow : TipoShow 
   precioBaseEntrada : float
   sala : Sala
}
class TipoShow {
    nombre : String
    descripcion : String
}

class Artista{
    nombre : String
    nacionalidad : String
}

class Sala{
    nombre : String 
    capacidad: Integer
    tipoSala: String
  espectaculos : List<Espectaculo>
  {abstract} float calcularPrecio(String TipoEntrada, float precioBaseEntrada)
}
class SalaCerrada {
  float calcularPrecio(String tipoEntrada, float precioBaseEntrada)
}
class Anfiteatro{
  float calcularPrecio(String tipoEntrada, float precioBaseEntrada)
}
class Entrada{
  tipo : String
  precio : float
  usuario : Usuario
  espectaculo : Espectaculo
}

@enduml